--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container d-flex justify-content-between align-items-center">
 
       <div class="logo">
-        <a href="https://bhattacharjee-k.github.io/CBBRedesign/"><img src="assets/img/Group 1503@2x.png"></a>
+        <a href="https://attaboydesign.github.io/ChildrensBookBank_Homepage_Repo/"><img src="assets/img/Group 1503@2x.png"></a>
         <!-- <h1>SoftLand</a></h1> -->
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
@@ -63,7 +63,7 @@
       <nav id="navbar" class="navbar">
         <ul>
           <li><a class="" href="https://attaboydesign.github.io/ChildrensBookBank_Repo/">Volunteer</a></li>
-          <li><a href="">Donate</a></li>
+          <li><a href="https://taraannbrooks.github.io/CBBDonate/">Donate</a></li>
           <li><a href="">About Us</a></li>
           <li><a href="">Our Mission</a></li>
           <li><a href="">Contact Us</a></li>
@@ -109,7 +109,7 @@
                   <div class="col-md-9" data-aos="fade-up">
                     <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
                       <ol class="breadcrumb">
-                        <li class="breadcrumb-item"><a href="https://bhattacharjee-k.github.io/CBBRedesign/">Home</a></li>
+                        <li class="breadcrumb-item"><a href="https://attaboydesign.github.io/ChildrensBookBank_Homepage_Repo/">Home</a></li>
                         <li class="breadcrumb-item"><a href="https://attaboydesign.github.io/ChildrensBookBank_Repo/">Volunteer</a></li>
                         <li class="breadcrumb-item active" aria-current="page">Book Drive</li>
                       </ol>
@@ -250,7 +250,7 @@
     </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Home</button>
-        <button type="button" class="btn btn-primary">Explore more</button>
+        <button type="button" class="btn btn-primary"><a href="https://taraannbrooks.github.io/CBBDonate/">Make a Donation!</a></button>
       </div>
     </div>
   </div>
@@ -299,9 +299,9 @@
             <!-- ======= end email ======= -->
             <ul class="footer-links d-flex">
               <div class="link-container">
-                <li><a href="https://bhattacharjee-k.github.io/CBBRedesign/">Home</a></li>
+                <li><a href="https://attaboydesign.github.io/ChildrensBookBank_Homepage_Repo/">Home</a></li>
                 <li><a href="https://attaboydesign.github.io/ChildrensBookBank_Repo/">Volunteer</a></li>
-                <li><a href="#">Donate</a></li>
+                <li><a href="https://taraannbrooks.github.io/CBBDonate/">Donate</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Our Mission</a></li>
               </div>
